# AzureSentinelARMTemplate

./: .gitignore  AAAAAAAAAAAAAAAAAA.json  Client_Sophos_Pack 1.json  Client_Sophos_Pack.json  Cliente_Action_Sophos_Block_Domain_Playbook.json  Cliente_Action_Sophos_Block_Hash_Playbook.json  Cliente_Action_Sophos_Block_IP_Playbook.json  Cliente_Action_Sophos_Block_IPs _Playbook.json  Cliente_Action_Sophos_Block_Incident_Domains_Playbook.json  Cliente_Action_Sophos_Block_Incident_Hashes_Playbook.json  Cliente_Action_Sophos_Block_Incident_IP_Playbook.json  Cliente_Action_Sophos_Block_Incident_IPs_Playbook.json  Cliente_Action_Sophos_Device_Isolation_Playbook.json  Cliente_Action_Sophos_Launch_Antivirus_Playbook.json  Cliente_Automation_Sophos_Block_IOC_Playbook.json  Cliente_Enrich_Sophos_Get_Device_Info_Playbook.json  Cliente_Enrich_Sophos_Get_Recent_Alert_Info_Playbook.json  README.md  batch.py  ejecutar  mkdocs.yml  name_validator.py  pyproject.toml  resultado 2.json  resultado2.json  script-automate-templates.bat  script-automate-templates.ps1
.venv-mkdocs/: pyvenv.cfg
AD/: Action_AD_Block_Host_Entity_Playbook.json  Action_AD_Block_User_Incident_Playbook.json  Action_AD_Unblock_Host_Alert_Playbook.json  OrchestatorPart_AD_Auth_Playbook.json  OrchestatorPart_AD_Block_Host_Playbook.json  OrchestatorPart_AD_Block_User_Playbook.json  OrchestatorPart_AD_Host_Info_Incident_Playbook.json  OrchestatorPart_AD_Unblock_Host_Playbook.json  OrchestatorPart_AD_Unblock_User_Playbook.json
API_parser_usernames/: Client_Action_API_Parser_Account_Entity_Playbook.json  (+12 more)
docs/: index.md
(+410 files in other folders)
