[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "template_automation"
version = "0.1.0"
description = "Program that automatizes parsing an ARM template with a master ARM template"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Sergio Perera Márquez", email = "sergio.pereram.dev@gmail.com" }
]
license = { file = "LICENSE.txt" }
dependencies = []

[project.scripts]
template-automation = "template_automation.__main__:main"

[tool.setuptools]
packages = { find = { where = ["src"] } }
